...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        addObservers()
        registerTableView()
        self.navigationController?.navigationBar.isHidden = false
        self.setTitleToBar(text: "", rightBarButtonNeeded: showSaveBarButton, rightButtonTitle: "Save")
        self.changeTabBar(hidden: true)
        // Do any additional setup after loading the view.
    }
    
    private func registerTableView() {
        tableView.registerNibCell(ofType: TitleDescriptionTableViewCell.self)
...
