...
           activityIndicator = nil
       }
   }
    
    func showAlert(message: String) {
        let alert = UIAlertController(title: "", message: message as String, preferredStyle: UIAlertController.Style.alert)
        alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.cancel, handler: nil))
        self.present(alert, animated: true, completion: nil)
    }
    
    func changeTabBar(hidden:Bool, animated: Bool = true) {
        guard let tabBarView = tabBarView else {return}
        
...
